--- a/src/app/pages/tickets/aside/aside.component.html
+++ b/src/app/pages/tickets/aside/aside.component.html
@@ -1,1 +1,6 @@
-<p>aside works!</p>
+<p-dropdown [options]="menuTypes"
+            [(ngModel)] = "selectedMenuType"
+            optionLabel ="label"
+            (onChange)="changeType($event)">
+
+</p-dropdown>
