--- a/src/app/pages/tickets/header/header.component.html
+++ b/src/app/pages/tickets/header/header.component.html
@@ -1,7 +1,8 @@
-<div class="d-flex">
+<div class="d-flex" >
 <div class="flex-grow-1">
   <p-menubar [model]="items"></p-menubar>
 </div>
+  <div class="user-login">{{user?.login}}</div>
 <div class = "time-block">
   <div>{{time | date : 'HH:mm:ss'}}</div>
   <p class = 'timer-day p-0 m-0'>{{time | date: 'EEEE'}}</p>
