--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -1,12 +1,12 @@
 <div class="d-flex flex-column h-100">
   <header>
-    <app-header></app-header>
+    <app-header [menuType] = "selectedType"></app-header>
   </header>
-  <div class="main-content d-flex h-100">
-    <div class="overflow-auto h-100">
+  <div class="main-content d-flex h-100 ">
+    <div class="overflow-auto h-100 w-100">
       <router-outlet></router-outlet>
     </div>
-    <app-aside></app-aside>
+      <app-aside (updateMenuType)="updateSelectedType($event)"></app-aside>
   </div>
   <footer>
     <app-footer></app-footer>
