--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -3,7 +3,7 @@
     <app-header [menuType] = "selectedType"></app-header>
   </header>
   <div class="main-content d-flex h-100 ">
-    <div class="overflow-auto h-100 w-100">
+    <div class="overflow-auto h-100 w-100 p-3">
       <router-outlet></router-outlet>
     </div>
       <app-aside (updateMenuType)="updateSelectedType($event)"></app-aside>
