--- a/src/app/pages/tickets/aside/aside.component.html
+++ b/src/app/pages/tickets/aside/aside.component.html
@@ -1,6 +1,20 @@
+<div>
 <p-dropdown [options]="menuTypes"
             [(ngModel)] = "selectedMenuType"
             optionLabel ="label"
             (onChange)="changeType($event)">
 
 </p-dropdown>
+</div>
+<!--Добавлен новый список-->
+<div class="mt-3">
+  <p-dropdown class="mt-3"
+              [options]="tourTypes"
+              optionLabel="label"
+              (onChange)="changeTourType($event)">
+  </p-dropdown>
+</div>
+<!--Добавлен календарь-->
+<div class="mt-3">
+  <p-calendar (onSelect)="selectDate($event)" ></p-calendar>
+</div>
