--- a/src/app/pages/tickets/ticket-list/ticket-list.component.html
+++ b/src/app/pages/tickets/ticket-list/ticket-list.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="tickets">
   <div *ngIf="renderComplete">
   <div>
-    <p>Количество элементов: {{tourWrap.childElementCount}}</p> <!-- или {{tickets.length}} -->
+    <p>Количество элементов: {{tickets.length}}</p> <!-- или {{tourWrap.childElementCount}} -->
     <p>Активный элемент: {{blockDirective.activeElementIndex}}</p>
     <!-- Поиск туров -->
     <div>
